@@ -1,3 +1,6 @@
+2004-06-25  Alexander Malysh  <a.malysh@centrium.de> 
+    * gwlib/log.c: fixed (workarounded) endless panic loop if memcheck were enabled.
+
 2004-06-22  Alexander Malysh  <a.malysh@centrium.de> 
     * doc/userguide/userguide.xml: fixed typo bug#133. additionaly reviewed and fixed
       deprecated 'dlrurl' and 'dlrmask' params.
